flies are added

--- a/Mongodb-starting/Slide13/Project_Structure/package.json
+++ b/Mongodb-starting/Slide13/Project_Structure/package.json
@@ -3,5 +3,17 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.3"
-  }
+  },
+  "name": "project_structure",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"node index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
